# mc-eels

./: .gitignore  README.md  README.md.txt  pyproject.toml  requirements.txt  setup.py
mceels/: __init__.py  analysis.py  background.py  gaussian.py  plots.py  plotting.py  preprocessing.py  widget.py
mceels/analysis/: __init__.py  gaussian.py  preprocessing.py
mceels/widgets/: __init__.py  spectra_image_plot.py
